# github

./: AGENTS.md  Architektur_Ist_Jenkins_SVN.drawio  Architektur_Soll_GitHub_Actions_Git.drawio  BYAUTOND.tgz  Handoff_Jenkins_SVN_zu_GitHub_Actions.md  LBS_SVN_Hook_v0.4.bash  Makefile  OSAUTONF.tgz  _INFO_BY-LOMS_Autonom[BY]-DELTA-R260.234-R260.178.txt  _INFO_OS-LOMS_Autonom[OS]-FULL-R260.100-R251.510.txt  foo.txt
mtext-actions/: CONTRACT.md  README.md  pyproject.toml
mtext-actions/.github/workflows/: ci.yml  configure-workflows.yml  reusable-release.yml  reusable-sync-resources.yml  reusable-validate-config.yml  reusable-validate-pr.yml  reusable-validate-release-promotion.yml
mtext-actions/config/: deployments.json  deployments.schema.json  mandant.schema.json  release_lines.json  releaselinien.json
mtext-actions/mtext-actions-next/: .gitignore  CONTRACT.md
mtext-actions/mtext-actions-next/tests/: __init__.py  support.py  test_mainframe.py  test_release.py  test_sync_mainframe.py  test_workflows.py
mtext-actions/scripts/: configure-workflows.py  runner-preflight.sh
mtext-actions/src/: workflow_configuration.py
mtext-actions/src/lbs_delivery/: __init__.py  __main__.py  cli.py  config.py  git.py  (+11 more)
mtext-actions/tests/: __init__.py  support.py  test_cli.py  test_config.py  test_configure_workflows.py  test_git.py  test_release.py  test_sync_mainframe.py  test_workflows.py
mtext-delivery-automation/: README.md  pyproject.toml
mtext-delivery-automation/config/: deployments.yml  mandant.schema.json
mtext-delivery-automation/templates/: mainframe-upload.jcl
(+54 files in other folders)
