[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lbs-delivery"
version = "0.0.0"
description = "Draft, side-effect-free core for the LBS delivery automation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["jsonschema>=4,<5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
